--- a/src/app/components/add-event-form/add-event-form.component.html
+++ b/src/app/components/add-event-form/add-event-form.component.html
@@ -6,27 +6,27 @@
 
     <div>
       <label for="title">title</label>
-      <input id="title" type="text" formControlName="title">
+      <input id="title" type="text" class="form-control" formControlName="title">
     </div>
 
     <div>
       <label for="description">description</label>
-      <input id="description" type="text" formControlName="description">
+      <input id="description" type="text" class="form-control" formControlName="description">
     </div>
 
     <div>
       <label for="date">date</label>
-      <input id="date" type="text" formControlName="date">
+      <input id="date" type="text" class="form-control" formControlName="date">
     </div>
 
     <div>
       <label for="time">time</label>
-      <input id="time" type="text" formControlName="time">
+      <input id="time" type="text" class="form-control" formControlName="time">
     </div>
 
-    <div>
-      <button type="submit" [disabled]="form.invalid">save</button>
-      <button (click)="buttonCancelClicked()">cancel</button>
+    <div class="buttons">
+      <button type="submit" [disabled]="form.invalid" class="btn btn-default">save</button>
+      <button (click)="buttonCancelClicked()" class="btn btn-danger">cancel</button>
     </div>
   </form>
 </div>
